# bevy_minimal_gltf

./: Cargo.toml  README.md
src/: lib.rs  loader.rs
