[package]
name = "bevy_minimal_gltf"
version = "0.12.0"
edition = "2021"
description = "Bevy Engine minimal GLTF loading"
repository = "https://github.com/yukkop/bevy_minimal_gltf"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_animation = { version = "0.12.0", optional = true }
bevy_app = { version = "0.12.0" }
bevy_asset = { version = "0.12.0" }
bevy_core = { version = "0.12.0" }
bevy_core_pipeline = { version = "0.12.0" }
bevy_ecs = { version = "0.12.0" }
bevy_hierarchy = { version = "0.12.0" }
bevy_log = { version = "0.12.0" }
bevy_math = { version = "0.12.0" }
bevy_pbr = { version = "0.12.0" }
bevy_reflect = { version = "0.12.0", features = ["bevy"] }
bevy_render = { version = "0.12.0" }
bevy_scene = { version = "0.12.0", features = ["bevy_render"] }
bevy_transform = { version = "0.12.0" }
bevy_tasks = { version = "0.12.0" }
bevy_utils = { version = "0.12.0" }

# other
gltf = { version = "1.3.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_volume",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "extras",
    "names",
    "utils",
] }
thiserror = "1.0"
base64 = "0.13.0"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
